add HTML semantic & fix the locations sections

--- a/TeaCozy/Resources/style.css
+++ b/TeaCozy/Resources/style.css
@@ -2,6 +2,11 @@
 
 /* Universal Styles */
 
+
+* {
+  margin : 0px;
+}
+
 body {
   background-color: black;
   font-family: helvetica;
@@ -12,10 +17,6 @@ body {
   padding-top: 0;
 }
 
-html{
-    margin: 0;
-    padding: 0;
-}
 
 /* Header Section */
 
@@ -80,6 +81,7 @@ header nav a {
 /* Feature Section */
 
 .features {
+  display: block;
   display: inline-flex;
   position: relative;
   top: 70px;
@@ -144,6 +146,10 @@ header nav a {
   height: 250px;
   align-content: center;
   justify-content: center;
+}
+
+.prex {
+  margin-top: 15%;
 }
 
 #location-title {
